# game-ocr

./: .gitignore  CLAUDE.md  README.md  ocr-config.json  progress.html  pyproject.toml
.claude/: settings.json
.claude/agents/: overlay-layout-reviewer.md
.claude/hooks/: py_compile_check.py  python_command_guard.py
.claude/skills/run-targeted-tests/: SKILL.md
docs/: LOCAL_TRANSLATE_API_USAGE.md  dev-environment.md  mvp-spec.md  ocr-overlay-font-sizing-spec.md  ocr-translate-block-logging-spec.md  ocr-translate-overlay-compacted.md
scripts/trans-api/: local_translate_gemma_4b.py
services/translate_api/: app.py
src/game_ocr/: __main__.py  app.py  capture.py  clipboard.py  config.py  font_config.py  hotkeys.py  logging_config.py  ocr.py  ocr_config.py  translate_client.py  translation_blocks.py
src/game_ocr/ui/: layout_source.py  layout_translated.py  notify.py  overlay.py  tray.py  widgets.py
tests/: test_app.py  test_capture.py  test_main.py  test_ocr.py  test_ocr_config.py  test_ocr_image_samples.py  test_translate_client.py  test_translation_blocks.py
