[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "game-ocr"
version = "0.1.0"
description = "GPU-only screen-region OCR utility for Windows."
requires-python = ">=3.10,<3.11"
dependencies = [
    "paddleocr>=3.5.0",
    "PySide6>=6.11.1",
    "mss>=10.2.0",
    "keyboard",
    "pyperclip>=1.11.0",
    "opencv-python>=4.10.0",
    "numpy",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
